--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Electron React!</title>
+    <title>Katalogz Maker</title>
     <script>
       (function() {
         if (!process.env.HOT) {
@@ -15,6 +15,7 @@
       }());
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|VT323" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
